Bug 1798177: Add expand/collapse of operator groups, type icons

--- a/frontend/packages/dev-console/src/components/topology/components/nodes/OperatorBackedService.scss
+++ b/frontend/packages/dev-console/src/components/topology/components/nodes/OperatorBackedService.scss
@@ -19,6 +19,11 @@
   &.is-filtered &__bg {
     stroke: $filtered-stroke-color;
   }
+
+  &.is-selected &__bg {
+    fill: $selected-fill-color;
+    stroke: $selected-stroke-color;
+  }
 }
 
 .odc-m-drag-active,
